fixtures/cs-cmp-01/good/timing-safe-equal-named-import.ts
import { timingSafeEqual } from "crypto";

export function safeCompare(a: Buffer, b: Buffer) {
	return timingSafeEqual(a, b);
}
